--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2> Data Science </h2>
         <ul>
         	<li>Abundance of Data - Video, Image, pdf, blog and newspaper</li>
-        	<li>Need to Analyze the data - Data Mining, Data Analytics, Data Preduction</li>
+        	<li>Need to Analyze the data - Data Mining, Data Analytics, Data Prediction</li>
         	<li>Computational paradigms such as map-reduce, hadoop, cloud stirage. data storage technology have enabled handling and analyzing the data possible</li>
         	<li>Many of the computational principles involve Statistical Computing</li>
         </ul>
